Updated: Base settings and app name.

--- a/app/styles/00-vendors/__index.scss
+++ b/app/styles/00-vendors/__index.scss
@@ -4,9 +4,8 @@
 
 /* ====== Bower Imports ====== */
 
-@import "../../vendor/sass-susy/sass/susy";
-@import "../../vendor/compass-breakpoint/stylesheets/breakpoint";
-@import "../../vendor/Font-Awesome/scss/font-awesome";
+@import "../../../bower_components/sass-susy/sass/susy";
+@import "../../../bower_components/compass-breakpoint/stylesheets/breakpoint";
 
 /* ====== Manual Imports ====== */
 
